istio/mtls/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: elasticsearch-service-entry
  namespace: dev
spec:
  hosts:
    - elasticsearch-es-http.elasticsearch.svc.cluster.local
    - elasticsearch-es-http.elasticsearch
  addresses:
    - 10.43.12.174  # ClusterIP of elasticsearch-es-http
  ports:
    - number: 9200
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
